methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: overriding method run in class SimpleBuggle of type ()Unit;
 method run needs `override' modifier
def run() {
    ^PictureMono2:6: error: method square overrides nothing
override def square() {
             ^